<resources>
    <string name="app_name">AssistantBeekeeper</string>
    <string name="button1">Button</string>
    <string name="textview">TextView</string>
    <string name="button">Wychow matek</string>
    <string name="add_breeding">AddBreeding</string>
    <string name="textView">TextView</string>
    <string name="notsettext">NotSetText</string>
    <string name="set_time_button">Button</string>
    <string name="ustaw_date">Ustaw date</string>
    <string name="current_location">Bierzaca lokalizacja</string>
    <string name="todo1">TODO</string>
    <string name="text_location">Hrubieszow</string>
    <string name="todo">Cześciowe zachmmurzenie</string>
    <string name="describe_weather_icon">cześciowe zachmurzenie</string>
    <string name="current_temperature">30</string>
    <string name="temperature_symbol">C</string>
    <string name="wind_speed">Wiatr</string>
    <string name="POP">POP %</string>
    <string name="sensible_temperature">real temperature</string>
    <string name="wind_icon">wind_icon</string>
    <string name="rain_icon">rain_icon</string>
    <string name="thermometer_icon">thermometer_icon</string>
    <string name="unit_speed"> km/h</string>
    <string name="percent">%</string>
    <string name="weekday">pon</string>
    <string name="temperature_day">T_Day</string>
    <string name="temperature_night">T_Night</string>
    <string name="five_days_forecast_button">Prognoza na 5 dni</string>
    <string name="title_alert">Title</string>
    <string name="time_event_start">Czas start</string>
    <string name="time_event_end">Czas stop</string>
    <string name="description_events">Opis</string>
    <string name="RefreshItem">RefreshItem</string>
    <string name="item2">Item2</string>
    <string name="switch1">Switch</string>
    <string name="ogolne">ogolne</string>
    <string name="meteorologiczne">meteorologiczne</string>
    <string name="informacje_drogowe">informacje_drogowe</string>
    <string name="hydrologiczne">hydrologiczne</string>
    <string name="button_test">Button</string>
    <string name="radar_button">Radar pogodowy</string>
    <string name="locality">Moja pasieka</string>
    <string name="production_cost">Koszty w bierzącym roku</string>
    <string name="earnings">Zysk w bierzącym roku</string>
    <string name="honey_production">Produkcja miodu</string>
    <string name="sum1">0</string>
    <string name="see_more">zobacz więcej</string>
    <string name="add_cost_button">Dodaj koszt</string>
    <string name="add_profit_button">Dodaj zysk</string>
    <string name="amount_of_production_button">Dodaj produkcje</string>
    <string name="enter_name_cost">Nazwa kosztu</string>
    <string name="ButtonAkceptForm">Dodaj Zysk</string>
    <string name="enter_text">Dodaj Zysk</string>
    <string name="enter_value_cost">Wprowadź wartość kosztu</string>
    <string name="enter_value_profit">Wprowadź wartość zysku</string>
    <string name="enter_name_profit">Wprowadź nazwe zysku</string>
    <string name="place_name">Nazwa miejscowosci</string>
    <string name="enter_value_production">Wprowadz wartość produkcji</string>
    <string name="ButtonAkceptProduction">Dodaj wartość produkcji</string>
    <string name="value">120.50</string>
    <string name="currency">zł</string>
    <string name="month_calendar">Styczeń</string>
    <string name="enter_name_apiary">Wprowadź nazwę pasieki</string>
    <string name="ButtonAddApiary">Dodaj pasiekę</string>
    <string name="addApiary">Dodaj pasieke</string>
    <string name="litre">l</string>

</resources>
