<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1951A"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/breedingButton"
        android:layout_width="360dp"
        android:layout_height="97dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#E4FF9800"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Breeding" />

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="175dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/db1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="306dp"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_location"
                        android:textColor="#FFFF"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/current_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_location"
                        android:textColor="#B7FFFFFF"
                        android:textSize="16sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/sunny">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/describe_weather_icon"
                        android:textColor="#B7FFFFFF"
                        android:textSize="12sp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp">
                    </TextView>


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>







