<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/value_production"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_value_production"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/date_production"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/value_production"
        android:layout_alignParentStart="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="96dp"
        android:text="@string/ustaw_date"
        android:textSize="20sp"
        app:errorEnabled="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButtonProduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="385dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_control_point_white_64dp"
        app:fabSize="normal"
        app:srcCompat="@color/colorAccentCustom" />

    <Button
        android:id="@+id/buttonConfirmProduction"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_below="@+id/date_production"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/ButtonAkceptProduction" />

    <TextView
        android:id="@+id/placeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:text="@string/place_name"
        android:textSize="22sp" />

</RelativeLayout>