<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical"
    android:background="#F1951A">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="14dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/db1">


            <TextView
                android:id="@+id/dateOperations"
                android:layout_width="181dp"
                android:layout_height="25dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/ustaw_date"
                android:textSize="18sp"
                android:textColor="@color/design_default_color_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionOperation"
                android:layout_width="229dp"
                android:layout_height="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/description_events"
                android:textColor="@color/design_default_color_background"
                android:textSize="18sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/valueOperation"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="4dp"
                android:text="@string/value"
                android:textAlignment="textEnd"

                android:textColor="@color/design_default_color_background"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/operationValute"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/operationValute"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="24dp"
                android:text="@string/currency"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_background"

                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>