<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="8dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/db1">

            <Button
                android:id="@+id/add_cost_button"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/rounded_button"
                android:text="@string/add_cost_button"
                android:textColor="@color/greyBackground"/>

            <Button
                android:id="@+id/add_profit_button"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="40dp"
                android:layout_toEndOf="@+id/add_cost_button"
                android:background="@drawable/rounded_button"
                android:text="@string/add_profit_button"
                android:textColor="@color/greyBackground"/>

            <Button
                android:id="@+id/add_amount_production"
                android:layout_width="122dp"
                android:layout_height="71dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="42dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/add_profit_button"
                android:background="@drawable/rounded_button"
                android:text="@string/amount_of_production_button"
                android:textColor="@color/greyBackground"/>
        </RelativeLayout>



    </androidx.cardview.widget.CardView>







</LinearLayout>