<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/form_add_apiary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_apiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_apiary"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/value_production"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_apiary"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_value_production"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonConfirmApiary"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_below="@+id/value_production"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="261dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/ButtonAddApiary" />


</RelativeLayout>