<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/db1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/db1"
            android:orientation="vertical"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/apiaryName"
                    android:layout_width="217dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="33dp"
                    android:layout_marginTop="19dp"
                    android:text="@string/locality"
                    android:textAlignment="textStart"
                    android:textColor="#FFFF"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/spinner_statistic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="81dp"
                    android:layout_marginBottom="15dp"
                    android:layout_toEndOf="@+id/apiaryName"
                    android:dropDownWidth="wrap_content"
                    android:spinnerMode="dropdown"
                    android:visibility="visible">

                </Spinner>


            </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="219dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="0dp"
                        android:gravity="center_vertical"
                        android:text="@string/production_cost"
                        android:textColor="#FDFFFFFF"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="97dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="15dp"
                        android:layout_toEndOf="@+id/textView5"
                        android:gravity="center_vertical"
                        android:text="@string/sum1"
                        android:textColor="#FDFFFFFF"
                        android:textSize="18sp"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#48FFFFFF" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="222dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/earnings"
                        android:textColor="#FFFF"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="107dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="15dp"
                        android:layout_toEndOf="@+id/textView4"
                        android:gravity="center_vertical"
                        android:text="@string/sum1"
                        android:textColor="#FDFFFFFF"
                        android:textSize="18sp"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#48FFFFFF" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="221dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/honey_production"
                        android:textColor="#FFFF"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="107dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="15dp"
                        android:layout_toEndOf="@+id/textView3"
                        android:gravity="center_vertical"

                        android:text="@string/sum1"
                        android:textColor="#FDFFFFFF"
                        android:textSize="18sp"/>

                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#48FFFFFF" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="76dp">


                <Button
                    android:id="@+id/five_days_forecast_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="22dp"
                    android:background="@android:color/transparent"
                    android:text="@string/see_more"
                    android:textStyle="italic"
                    android:textColor="#95FAFAF8"
                    android:textSize="14sp" />

            </RelativeLayout>


        </LinearLayout>



    </androidx.cardview.widget.CardView>





</LinearLayout>